# duckpond

./: AGENTS.md  CONTRIBUTING.md  README.md
.claude-plugin/: marketplace.json
.github/skill-eval/: assert_triggers.py  check_incremental.py  discovery-prompt.txt  task.md
.github/workflows/: ci.yml  pages.yml  release-duckbill.yml  skill-eval.yml
duckbill/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
duckbill/duckbill/: __init__.py  bundle.py  cli.py  core.py  docs.py  loader.py  page.py  prune.py  questions.py  server.py  server_bundle.py  static_bundle.py
duckbill/duckbill/backends/: __init__.py  base.py  duckdb.py  mysql.py  postgres.py  snowflake.py  sqlite.py
duckbill/examples/: gen_sample_db.py  web_service.py
duckbill/tests/: conftest.py  test_backends_factory.py  test_backends_mysql.py  test_backends_postgres.py  test_backends_scan.py  test_backends_snowflake.py  test_backends_sqlite.py  test_bundle_cli.py  test_bundle_guard.py  test_duckbill.py  test_prune.py  test_server_bundle.py  test_static_bundle.py
ducktail/: README.md  mypy.ini  requirements-dev.txt
ducktail/.claude-plugin/: plugin.json
ducktail/skills/ducktail/: README.md  SKILL.md
ducktail/skills/ducktail/references/: .gitignore  README.md  refresh.py
ducktail/tests/: conftest.py  test_harness_robustness.py  test_reference_selftest.py  test_skill.py  test_template_dash.py  test_template_incremental.py  test_template_structure.py
examples/weather/: .gitignore  README.md  dash.py  ducktail.py  mypy.ini  refresh.py
examples/weather/sources/: _http.py  _openmeteo.py  _solar.py  air_quality.py  cities.py  daylight.py  earthquakes.py  pageviews.py  weather.py
examples/weather/tests/: test_pipeline.py
examples/weather/tests/fixtures/: openmeteo_air_quality.json  sunrise_sample.json  (+3 more)
(+6 files in other folders)
